# KNN-and-Sockets

./: .gitignore  BeforeDownloadCommandClient.cpp  BeforeDownloadCommandClient.h  CLI.cpp  CLI.h  CMakeLists.txt  Canberra.cpp  Canberra.h  Chebyshev.cpp  Chebyshev.h  Classification.cpp  Classification.h  ClassifyCommand.cpp  ClassifyCommand.h  ClassifyCommandClient.cpp  ClassifyCommandClient.h  ClassifyCommandServer.cpp  ClassifyCommandServer.h  Client.cpp  Client.h  Command.cpp  Command.h  Data.cpp  Data.h  DefaultIO.cpp  DefaultIO.h  DisplayCommand.cpp  DisplayCommand.h  DisplayCommandClient.cpp  DisplayCommandClient.h  DisplayCommandServer.cpp  DisplayCommandServer.h  DistanceClass.cpp  DistanceClass.h  DownloadCommand.cpp  DownloadCommand.h  DownloadCommandClient.cpp  DownloadCommandClient.h  DownloadCommandServer.cpp  DownloadCommandServer.h  (+46 more)
Client/: BeforeDownloadCommandClient.cpp
cmake/: Advanced_Programming_1_Project  CMakeCache.txt  Makefile  cmake_install.cmake
distance/cpp/: Canberra.cpp  Chebyshev.cpp  Classification.cpp  DistanceClass.cpp  Euclidean.cpp  Knn.cpp  Main.cpp  Manhattan.cpp  Minkowski.cpp  ReadFile.cpp  canberra.cpp  chebyshev.cpp  distanceClass.cpp  euclidean.cpp  euclideanDistance.cpp  main.cpp  manhattan.cpp  manhattanDistance.cpp  minkowski.cpp
distance/h/: Canberra.h  Classification.h  DistanceClass.h  Knn.h  Main.h  Manhattan.h  Minkowski.h  canberra.h  chebyshev.h  distanceClass.h  euclidean.h  euclideanDistance.h  main.h  manhattan.h  manhattanDistance.h  minkowski.h
